<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreviousQuiz">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="231dp"
        android:layout_height="42dp"
        android:text="@string/obtained_marks"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prev_quiz_details"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:id="@+id/prev_quiz_details"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:text="@string/previous_quizzes"
        android:textColor="#2699FB"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/subNamePrevQuiz"
        android:layout_width="173dp"
        android:layout_height="41dp"
        android:text="@string/subject_name"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prev_quiz_details"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/chapNamePrevQuiz"
        android:layout_width="173dp"
        android:layout_height="41dp"
        android:text="@string/chapter_name"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <EditText
        android:id="@+id/time"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time"
        android:textColorHint="#2699FB"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <EditText
        android:id="@+id/date"
        android:layout_width="173dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:textColorHint="#2699FB"
        android:textSize="26dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <View
        android:id="@+id/view"
        android:layout_width="361dp"
        android:layout_height="323dp"
        android:background="@drawable/edit_text_border2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <Button
        android:id="@+id/viewbtn"
        android:layout_width="93dp"
        android:layout_height="52dp"
        android:background="#2699FB"
        android:text="View"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.485" />

    <Button
        android:id="@+id/button26"
        android:layout_width="356dp"
        android:layout_height="73dp"
        android:background="#FB2626"
        android:text="Go Back"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />
</androidx.constraintlayout.widget.ConstraintLayout>