<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompletionOfQuiz">

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/backarrowQuizcompletation"
        android:src="@drawable/backarrow"
        app:layout_constraintBottom_toTopOf="@+id/congratulationID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/congratulationID"
        android:layout_width="224dp"
        android:layout_height="60dp"
        android:fontFamily="@font/advent_pro_light"
        android:text="@string/congratulations"
        android:textColor="#317F39"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />


    <TextView
        android:id="@+id/quizCompleteText"
        android:layout_width="368dp"
        android:layout_height="44dp"
        android:text="@string/you_have_completed_the_quiz"
        android:textColor="#2699FB"
        android:textSize="27sp"
        android:fontFamily="@font/advent_pro_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <Button
        android:id="@+id/ProceedEvaluation"
        android:layout_width="293dp"
        android:layout_height="67dp"
        android:background="#2699FB"
        android:fontFamily="@font/advent_pro_light"
        android:text="@string/proceed_to_evaluation"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

</androidx.constraintlayout.widget.ConstraintLayout>