<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <ScrollView
        android:layout_width="317dp"
        android:layout_height="720dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_editor_absoluteX="8dp"
        app:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Select_class"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/create_an_account"
                android:textAlignment="center"
                android:textColor="#2699FB"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.098" />

            <TextView
                android:id="@+id/FullName"
                android:layout_width="fill_parent"
                android:layout_height="33dp"
                android:text="@string/full_name"
                android:textColor="#2699FB"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.128"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Select_class"
                app:layout_constraintVertical_bias="0.056" />

            <EditText
                android:id="@+id/passwordID"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:ems="10"
                android:hint="Enter Your Name"
                android:inputType="textPersonName"
                android:textColorHint="#2699FB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FullName"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/Email"
                android:layout_width="76dp"
                android:layout_height="44dp"
                android:text="Email"
                android:textAlignment="gravity"
                android:textColor="#2699FB"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordID"
                app:layout_constraintVertical_bias="0.068" />

            <EditText
                android:id="@+id/dateOfBirthID"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:ems="10"
                android:hint="Enter Your Email"
                android:inputType="textPersonName"
                android:textColorHint="#2699FB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.531"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Email"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/addressID"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHighlight="#2699FB"
                android:textColorHint="#2699FB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateOfBirthID"
                app:layout_constraintVertical_bias="0.075" />

            <TextView
                android:id="@+id/PersonalInfo"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="Personal Information"
                android:textAlignment="center"
                android:textColor="#2699FB"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressID"
                app:layout_constraintVertical_bias="0.137" />

            <TextView
                android:id="@+id/DOB"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="Date of Birth"
                android:textColor="#2699FB"
                android:textSize="24sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Date"
                android:inputType="date"
                android:textColorHighlight="#2699FB"
                android:textColorHint="#2699FB"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/CitySpinner"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:entries="@array/city_names"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="47dp" />

            <TextView
                android:id="@+id/PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text="Phone Number"
                android:textColor="#2699FB"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:background="#2699FB"
                android:text="Continue"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>